--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,20 +5,27 @@ on:
   pull_request:
     branches:
       - master
+
 name: Test
+
 jobs:
   test:
-    strategy:
-      matrix:
-        go-version: [1.15.x]
-        os: [ubuntu-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: 1.15.x
+
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Test
-        run: go test ./...
+
+      - name: Run Go Test Suite
+        run: go test ./... -race -coverprofile=coverage.txt -covermode=atomic
+
+      - name: Upload to CodeCov
+        if: github.event_name == 'pull_request'
+        uses: codecov/codecov-action@v1
+        with:
+          file: ./coverage.txt
+          verbose: true
